...
                )

                ActionIconButton(
                    onClick = {
                        viewModel.onIntent(ProfileIntent.AddFriend)
                    },
                    modifier = Modifier.testTag("profile_add_friend_button"),
                ) {
                    Icon(
                        painter = painterResource(Res.drawable.ic_person_add),
                        contentDescription = null,
                    )
                }
...
