...
            name = name,
        ) {
            when (status) {
                FriendshipStatus.NONE -> AddFriendUserItemActionButton(
                    text = stringResource(Res.string.add_friend_request),
                    onClick = onAdd,
                    modifier = Modifier.testTag("addfriend_request_button"),
                )

                FriendshipStatus.REQUEST_RECEIVED -> AddFriendUserItemActionButton(
                    text = stringResource(Res.string.add_friend_accept),
                    onClick = onAccept,
                    modifier = Modifier.testTag("addfriend_accept_button"),
                )

                FriendshipStatus.REQUEST_SENT -> AddFriendUserItemActionButton(
                    text = stringResource(Res.string.add_friend_requested),
                    onClick = {},
                    enabled = false,
                    modifier = Modifier.testTag("addfriend_requested_button"),
                )

                FriendshipStatus.FRIEND -> AddFriendUserItemActionButton(
                    text = stringResource(Res.string.add_friend_friends),
                    onClick = {},
                    enabled = false,
...
