...
    val gradientEnd = MaterialTheme.colorScheme.primary
    Card(
        onClick = onClick,
        modifier = modifier
            .fillMaxWidth()
            .aspectRatio(0.8f)
            .testTag("discover_artist_card"),
    ) {
        Box(
            modifier = Modifier
                .fillMaxSize()
                .background(color = coral)
                .padding(6.dp),
...
                        minFontSize = 10.sp, // Minimum allowable size
                        maxFontSize = 14.sp, // Maximum allowable size
                        stepSize = 0.5.sp, // Granularity of adjustment
                    ),
                    modifier = Modifier
                        .padding(horizontal = 4.dp)
                        .testTag("discover_artist_name"),
                )
            }

            FavoriteIconButton(
                enabled = artist.isFavorited,
                onClick = onFavoriteToggle,
...
